# mlops-project

./: .dockerignore  .dvcignore  .gitignore  Dockerfile  README.md  data_analysis_report.txt  docker-compose.yml  dvc.yaml  main.py  metrics.json  project.md  pyproject.toml  requirements.txt  test_basic.py  train_model.py
.dvc/: config
data/: ll_2018.csv.dvc  ll_2019.csv.dvc  ll_2020.csv.dvc  ll_2021.csv.dvc  ll_2022.csv.dvc  ll_2023.csv.dvc  ll_2024.csv.dvc  ll_2025.csv.dvc  ll_2026.csv.dvc
deploy/k8s/: minikube.yaml
docs/: data.md  project-report.md  project.md
k8s/: README.md  minikube.yaml
prefect/: memo_store.toml  prefect.db  prefect.db-shm  prefect.db-wal
scripts/: convert_jaamad.py
src/: __init__.py
src/api/: app.py
src/dashboard/: app.py
src/data/: __init__.py  loader.py  preprocessor.py
src/features/: __init__.py  engineer.py
src/flows/: __init__.py  training.py
src/models/: __init__.py  anomaly.py
src/monitoring/: __init__.py  drift.py
tests/: test_basic.py
