[project]
name = "mlops-project"
version = "0.1.0"
description = "Real-Time Traffic Anomaly Detection with MLOps"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "pyarrow>=1.0.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "numpy>=1.26.0",
    "fire>=0.5.0",
    "mlflow>=2.14.0",
    "prefect>=3.0.0",
    "folium>=0.20.0",
    "streamlit-folium>=0.27.2",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
mlflow = ["mlflow>=2.14.0"]
prefect = ["prefect>=3.0.0"]
api = ["fastapi>=0.109.0", "uvicorn[standard]>=0.27.0", "pydantic>=2.5.0", "httpx>=0.26.0"]
dashboard = ["streamlit>=1.32.0", "folium>=0.15.0", "plotly>=5.0.0"]
monitoring = ["evidently>=0.4.0"]
dvc = ["dvc>=3.0.0"]
all = [
    "mlflow>=2.14.0",
    "prefect>=3.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
    "streamlit>=1.32.0",
    "folium>=0.15.0",
    "streamlit-folium>=0.1.0",
    "plotly>=5.0.0",
    "evidently>=0.4.0",
    "dvc>=3.0.0",
    "python-dotenv>=1.0.0",
    "workalendar>=16.0.0",
    "holidays>=0.46",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
